demo user removed

--- a/src/app/public/login/login.component.html
+++ b/src/app/public/login/login.component.html
@@ -66,6 +66,7 @@
     styleClass="w-full mt-2"
   ></p-button>
 
+  <!-- 
   <div class="mt-2">
     <p-button
       label="Alumno demo"
@@ -75,15 +76,16 @@
       styleClass="w-full"
       (click)="mockLogin('user')"
     ></p-button>
-    <!-- <p-button
+    <p-button
       label="Mock Admin"
       icon="pi pi-shield"
       severity="secondary"
       variant="outlined"
       class="flex-grow-1"
       (click)="mockLogin('admin')"
-    ></p-button> -->
+    ></p-button> 
   </div>
+  -->
   <div class="text-center mt-2">
     <span>¿No tienes cuenta? </span>
     <a
