--- a/src/app/private/calendar/calendar.component.html
+++ b/src/app/private/calendar/calendar.component.html
@@ -170,7 +170,7 @@
           }
         </span>
       </div>
-      } @else if (!canChangeMembership(item)) {
+      } @else if (!moreThan24Hours(item)) {
       <div
         class="flex align-items-center gap-2 p-2 border-round bg-orange-50 text-orange-900 text-xs border-1 border-orange-100">
         <i class="pi pi-clock"></i>
@@ -180,7 +180,7 @@
       <div
         class="flex align-items-center gap-2 p-2 border-round bg-blue-50 text-blue-900 text-xs border-1 border-blue-100">
         <i class="pi pi-info-circle"></i>
-        <span>La clase está completa (máximo 12 alumnos). No se permiten más inscripciones en este momento.</span>
+        <span>La clase está completa (máximo 12 alumnos). No se aceptarán inscripciones si no hay cancelaciones.</span>
       </div>
       }
       }
@@ -196,22 +196,24 @@
       <div class="flex justify-content-end gap-2">
         @let item = selectedClass()[0];
         @if (item) {
-        @if (loggedUser()?.role === 'admin') {
-        <p-button label="Editar" variant="outlined" severity="warn"
-          (click)="visibleDialog.set(false); visibleEditDialog.set(true)" />
-        }
+          @if (loggedUser()?.role === 'admin') {
+            <p-button label="Editar" variant="outlined" severity="warn"
+              (click)="visibleDialog.set(false); visibleEditDialog.set(true)" />
+            }
 
-        @if (loggedUser()?.role === 'user') {
-        @if (item.status === 'active' && canChangeMembership(item)) {
-        @if (isUserMember(item.members)) {
-        <p-button label="No asistiré" variant="outlined" severity="danger" (click)="toggleMembership(item)" />
-        } @else if (isUserRequested(item.requests)) {
-        <p-button label="Cancelar solicitud" variant="outlined" severity="warn" (click)="toggleMembership(item)" />
-        } @else if (item.members.size
-        < 12) { <p-button label="Inscribirse" severity="success" (click)="toggleMembership(item)" />
-        }
-        }
-        }
+          @if (loggedUser()?.role === 'user') {
+            @if (item.status === 'active' && moreThan24Hours(item)) {
+            @if (isUserMember(item.members)) {
+            <p-button label="No asistiré" variant="outlined" severity="danger" (click)="toggleMembership(item)" />
+              }
+              @else if (isUserRequested(item.requests)) {
+              <p-button label="Cancelar solicitud" variant="outlined" severity="warn" (click)="toggleMembership(item)" />
+              }
+              @else {
+              <p-button label="Inscribirse" severity="success" (click)="toggleMembership(item)" />
+              }
+              }
+              }
         }
         <p-button label="Cerrar" variant="outlined" severity="secondary" (click)="visibleDialog.set(false)" />
       </div>
